--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "author": "Jake Seo <n00nietzsche@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.3",
+    "babel-core": "7.0.0-bridge.0",
     "dotenv": "^7.0.0",
+    "eslint": "^5.16.0",
     "graphql-yoga": "^1.17.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.18.11",
+    "@babel/cli": "^7.0.0"
   },
   "scripts": {
     "dev": "nodemon --exec babel-node src/server.js"
