--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
     "babel-core": "7.0.0-bridge.0",
+    "custom-env": "^1.0.0",
     "dotenv": "^7.0.0",
     "eslint": "^5.16.0",
     "graphql-tools": "^4.0.4",
     "graphql-yoga": "^1.17.4",
+    "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.1.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "prisma": "^1.31.1"
   },
   "devDependencies": {
@@ -25,6 +31,8 @@
   },
   "scripts": {
     "dev": "nodemon --exec babel-node src/server.js",
-    "deploy": "prisma deploy"
+    "deploy": "prisma deploy",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn run generate"
   }
 }
