--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
 ],
 
 "prettier.singleQuote": true,
-"prettier.stylelintIntegration": true
+"prettier.stylelintIntegration": true,
+"editor.tabSize": 2
 }
